# CEIA_2025_B5_PNL2_TP3

./: .env  .gitignore  README.md  agente.py  carga_inicial.ipynb  front.py  pyproject.toml  requirements.txt
